@@ -302,6 +302,7 @@ typedef struct texModInfo_s {
 #define SURFSPRITE_ORIENTED		2
 #define SURFSPRITE_EFFECT		3
 #define SURFSPRITE_WEATHERFX	4
+#define SURFSPRITE_FLATTENED	5
 
 #define SURFSPRITE_FACING_NORMAL	0
 #define SURFSPRITE_FACING_UP		1
