@@ -1005,6 +1005,10 @@ static void ParseSurfaceSprites( const char *_text, shaderStage_t *stage )
 	{
 		sstype = SURFSPRITE_EFFECT;
 	}
+	else if (!Q_stricmp(token, "flattened"))
+	{
+		sstype = SURFSPRITE_FLATTENED;
+	}
 	else
 	{
 		Com_Printf (S_COLOR_YELLOW  "WARNING: invalid type in shader '%s'\n", shader.name );
